Create and display html element for each task

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class="main">
-    <div class="tasks-container"></div>
+    <div class="tasks-container flex--row"></div>
   </section>
 </body>
 </html>
