Add checkbox, task location and page heading
Import font-awesome icons

Create init.js file for initialzing client

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,14 @@
   <title>OAP Staff</title>
   <link rel="stylesheet" href="index.css">
   <script defer src="tasks.js"></script>
+  <script defer src="init.js"></script>
+  <script src="https://kit.fontawesome.com/d115db5e03.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section class="main">
-    <div class="tasks-container flex--row"></div>
+    <div class="tasks-container flex--column">
+      <h2>All Tasks</h2>
+    </div>
   </section>
-</body>
+  </body>
 </html>
