Make client.js to get client data from server
Connect js files using modules system

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OAP Staff</title>
   <link rel="stylesheet" href="index.css">
-  <script defer src="tasks.js"></script>
-  <script defer src="init.js"></script>
+  <script defer type="module" src="index.js"></script>
   <script src="https://kit.fontawesome.com/d115db5e03.js" crossorigin="anonymous"></script>
 </head>
 <body>
