Set up section in dom where controls will be
Make minor improvements to color and layout

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
   <script src="https://kit.fontawesome.com/d115db5e03.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <section class="main">
+  <section class="main flex--row">
     <div class="tasks-container flex--column">
-      <h2>All Tasks</h2>
+      <h2 class="_heading">Tasks<span class="_heading__details"> (All)</span></h2>
+    </div>
+    <div class="controls">
+
     </div>
   </section>
   </body>
