Change .tasks-container class to just .tasks

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <section class="main flex--row">
-    <div class="tasks-container flex--column">
+    <div class="tasks flex--column">
       <h2 class="_heading">Tasks<span class="_heading__details"> (All)</span></h2>
     </div>
     <div class="controls">
