Change section.main to just main

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
   <script src="https://kit.fontawesome.com/d115db5e03.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <section class="main flex--row">
-    <div class="tasks flex--column">
+  <main class="flex--row">
+    <section class="tasks flex--column">
       <h2 class="_heading">Tasks<span class="_heading__details"> (All)</span></h2>
-    </div>
-    <div class="controls">
-
-    </div>
-  </section>
-  </body>
+    </section>
+    <section class="controls">
+      <div class="toolbar flex--column"></div>
+      <div class=""></div>
+    </section>
+  </main>
+</body>
 </html>
