Add ability for toolbar buttons to turn on and off menus

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,33 @@
         </div>
       </div>
       <div class="menus">
-        <div class="tasks-menu flex--column">
+        <div class="menu tasks-menu flex--column">
           <div class="tasks-menu__btn tasks-menu__add-task flex--row clickable click-effect--descend">
             <p>Add Task</p>
           </div>
           <div class="tasks-menu__btn tasks-menu__remove-task flex--row clickable click-effect--descend">
             <p>Remove Task</p>
+          </div>
+        </div>
+        <div class="menu clients-menu flex--column">
+          <div class="menu__work-in-progress">
+            <h2><i class="fa-solid fa-wrench"></i> Work in Progress <i class="fa-solid fa-wrench"></i></h2>
+              <p>We don't care about any inconvenience this might cause.</p>
+              <p>If that hurts your feelings then GROW THE FU...</p>
+          </div>
+        </div>
+        <div class="menu filter-menu flex--column">
+          <div class="menu__work-in-progress">
+            <h2><i class="fa-solid fa-wrench"></i> Work in Progress <i class="fa-solid fa-wrench"></i></h2>
+              <p>We don't care about any inconvenience this might cause.</p>
+              <p>If that hurts your feelings then GROW THE FU...</p>
+          </div>
+        </div>
+        <div class="menu settings-menu flex--column">
+          <div class="menu__work-in-progress">
+            <h2><i class="fa-solid fa-wrench"></i> Work in Progress <i class="fa-solid fa-wrench"></i></h2>
+              <p>We don't care about any inconvenience this might cause.</p>
+              <p>If that hurts your feelings then GROW THE FU...</p>
           </div>
         </div>
       </div>
